<resources>
    <string name="app_name">Databees</string>
    <string name="action_done">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_new_apiary">Add a new apiary</string>
    <string name="action_add_new_hive">Add a new hive</string>
    <string name="action_add_new_inspection">Add a new inspection</string>
    <string name="action_add_new_task">Add a New Task</string>
    <string name="button_add_hives">Add Hives</string>
    <string name="button_manage_flora">Manage Flora</string>
    <string name="locate_me_button">Locate Me</string>
    <string name="button_edit_hive_details">Edit Hive Details</string>
    <string name="button_add_inspections">Add Inspections</string>
    <string name="button_inspection_date_now">Now</string>
    <string name="hint_new_apiary_name">New Apiary Name</string>
    <string name="hint_type_notes">Add Notes Here</string>
    <string name="hint_new_task_title">New Task Title</string>
<string name="hint_new_hive_name">New Hive Name</string>
    <string name="hint_inspection_date_day">DAY</string>
    <string name="hint_inspection_date_month">MONTH</string>
    <string name="hint_inspection_date_year">YEAR</string>
    <string name="hint_suppers">Specify the number of suppers the hive consists of</string>
    <string name="hint_colony_source">Specify the colony source</string>
    <string name="hint_queen_seen">Was he queen found in the hive?</string>
    <string name="hint_queen_marked">Is the queen marked?</string>
    <string name="hint_type_task_desc">Add Description Here</string>
    <string name="hint_schedule_task">Schedule task to be done on this date</string>
    <string name="hint_link_to">Select hive from the list to link to this task</string>
    <string name="hint_date_to_choose">Click on calendar to pick date</string>
    <string name="hint_alarm">Set a Reminder for this task</string>
    <string name="hint_alarm_time">Specify when to be reminded</string>
    <string name="hint_pick_time">Pick time</string>
    <string name="label_apiary_activity">Apiary</string>
    <string name="label_hive_activity">Hive</string>
    <string name="label_inspection_activity">Inspection</string>
    <string name="label_general_ispection_tab">General</string>
    <string name="label_queen_ispection_tab">Queen</string>
    <string name="label_diseases_ispection_tab">Diseases</string>
    <string name="label_suppers">Number Of Suppers</string>
    <string name="label_colony_source">Colony source</string>
    <string name="label_queen_seen">Queen seen</string>
    <string name="label_queen_marked">Queen marked</string>
    <string name="label_inspection_date">Inspection Date</string>
    <string name="label_bees_temper">Bees Temper</string>
    <string name="label_eggs_present">Eggs are present</string>
    <string name="label_polen_in">Polen in hive</string>
    <string name="label_task_activity">Task</string>
    <string name="label_pick_time">Pick time</string>
    <string name="label_select_date">Pick time</string>
    <string name="label_task_date">Task is scheduled to be done on</string>
	<string name="label_task_details">Details</string>
	<string name="label_link_to">Link To</string>
	<string name="label_alarm">Reminder</string>
	<string name="label_alarm_time">Reminder on</string>
	<string name="label_task_alarm">Reminder on</string>
    <string name="menu_item_apiaries">Apiaries</string>
    <string name="menu_item_tasks">Tasks</string>
    <string name="menu_item_desease_guide">Disease Guide</string>
    <string name="menu_item_news_feed">News Feed</string>
    <string name="menu_item_edit_account">Edit</string>
    <string name="menu_item_logout">Logout</string>
    <string name="content_descr_weather_condition_graphical_indicator">Weather condition graphical indicator</string>
    <string name="content_descr_hive_image">Hive image</string>
    <string name="hive_list_item_never_inspected">This hive has never been inspected</string>
    <string name="last_inspected_on">Last inspected on</string>
    <string name="inspection_on">Inspection on</string>
    <string name="toast_nothing_to_delete">Nothing to delete</string>
    <string name="toast_prompt_apiary_name">Please enter a name for the apiary</string>
    <string name="toast_prompt_apiary_location">Long tap on the map to select the location of the apiary</string>
    <string name="toast_prompt_hive_name">Please enter a name for the hive</string>
    <string name="toast_prompt_task_title">Please enter a title for the task</string>
    <string name="placeholder_item_title">Item Title</string>
    <string name="placeholder_item_description">Item Description</string>
    <string name="placeholder_weather_condition">Weather</string>
    <string name="placeholder_weather_degrees">XX°C</string>
    <string name="placeholder_hive_picture">Tap here to add a picture</string>
    <string name="weather_condition_clear">Clear</string>
    <string name="weather_condition_clouds">Clouds</string>
    <string name="weather_condition_rain">Rain</string>
    <string name="weather_condition_snow">Snow</string>
    <string-array name="temper_values">
        <item>Undefined</item>
        <item>Mild</item>
        <item>Angry</item>
        <item>Tantrum</item>
    </string-array>
    <string-array name="hives_spinner">
        <item>The Hive</item>
        <item>North Hive</item>
    </string-array>
     <string-array name="reminder_spinner">
        <item>1 day</item>
        <item>Pick a day</item>
    </string-array>
       <string name="varroa">
		<![CDATA[
		
		<h2>Varroa Mite</h2>
		<p>The varroa mite, <i>Varroa destructor</i>, is an external parasite of honey bees and, globally, the most serious threat to the Western honey bee, <i>Apis mellifera</i>, which has few natural defences against varroa.</p>
		<p>A parasite that feeds on the bee and acts as a vector for viruses, varroa is widely believed to be at the core of unexplained bee losses (Colony Collapse Disorder) across the world. Untreated, colonies will die in just a few years but signs of infestation may not be obvious until infestation levels are high, by which stage the colony is at great risk.</p>
		<p>Early detection, therefore, is essential and beekeepers should remain constantly vigilant.</p>
		<h2>Detection</h2>
		Adult varroa mites are reddish-brown in colour, oval and small in size but visible to the naked eye (1.5 mm by 1 mm) with eight legs. Varroa mites are usually seen as reddish spots on the white larvae. Or behind the head or nestled between the abdominal segments of the adult bee.</br>
		<br> </br>
		<br>Check for:</br>
		
		<br>● Mites in hive floor debris (purpose-made varroa floors help)</br>
		<br>● Mites visible on adult bees, on wax combs and in cells</br>
		<br>● Varroa on uncapped and examined drone brood</br>
		<br>● Diagnostic treat ment with approved acaricides and methods</br>
		
		<br>Warning signs:</br>
		
		<br>● Sudden crash in adult bee numbers</br>
		<br>● Twisted/Shrivelled wings, small abdomens or other deformities</br>
		<br>● Poor general colony health, irregular brood pattern</br>
		
		<h2>Prevention</h2>
		Where possible, the following factors, which can accelerate the spread of the varroa mite, should be avoided:
		
		<br>● Migratory beekeeping</br>
		<br>● Transfer of bees between colonies</br>
		<br>● Allowing colonies (perhaps already weakened by varroa) to become vulnerable to robber bees</br>
		
		<h2>Treatment</h2>
		It is very important to use a product that has been licensed for varroa control and has been thoroughly tested and approved for efficacy, safety and quality.
		Apistan and Apiguard are each registered in approximately 60 countries globally and are two of the worlds leading varroa medicines. Additionally, VitaFeed Gold and VitaFeed Green help maintain health colonies better able to withstand varroa infestations.
		
		<br> </br>
		<br>Tips:</br>
		
		<br>● Monitor infestation levels to assess mite count compared with harmful levels and to check effectiveness of current method of control</br>
		<br>● Use a combination of methods (Integrated Pest Management), such as combining both biomechanical methods and chemical treatments</br>
		<br>● Use approved varroacides such as Apistan and Apiguard with proven efficacy and safety</br>
		<br>● Follow manufacturers guidelines; incorrect use may result in residues and promote the development of resistance</br>
		<br>● Use a co-ordinated approach by developing a treatment programme with other local beekeepers to reduce the likelihood of re-infestation 
		
		]]>
	</string>
    <string name="european">
		<![CDATA[
		
		<h2>European Foulbrood</h2>
		<p>European Foulbrood (EFB) is a serious bacterial disease of honeybee brood caused by several agents, the main being the bacterium <i>Melissococcus plutonis</i>. Incidences of EFB are increasing although it is not yet thought as serious as American Foulbrood. However, the two diseases are easily confused and misdiagnosed.</p>

		<p>European Foulbrood occurs most frequently in the spring or early summer during brood rearing and is thought to be caused by stress in the colony and lack of pollen.</p>

		<p>Symptoms can be variable which makes EFB difficult to identify with certainty; frequently disappearing when there is a nectar flow. But EFB can seriously affect brood development and needs to be identified as soon as possible.</p>
		
		In the UK, around 50% of EFB-infected colonies per year are destroyed, with costs to beekeepers also imposed by standstill notices on infected apiaries (in place for years in some areas) and losses of honey yields, pollination contracts and sale of bees.
		
		<h2>Detection</h2>
		<p>Early detection is essential because just one infected cell can lead to the destruction of an entire apiary. In colonies infected with either European or American Foulbrood the brood pattern can appear very patchy and irregular (sometimes termed pepper-pot) in distribution. </p>
		
		Unlike with AFB, cadavers of EFB infested larvae cannot be stretched (or roped out) with a matchstick or similar instrument.
		
		European Foulbrood can be identified by costly and time consuming laboratory tests but perhaps the best, and easiest, method is to use Vita EFB Diagnostic Kit - a simple to use field kit that gives a clear result in just three minutes.

		]]>
	</string>
</resources>