<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingBottom="@dimen/margin_common_vertical"
	android:paddingLeft="@dimen/margin_common_horizontal"
	android:paddingRight="@dimen/margin_common_horizontal"
	android:paddingTop="@dimen/margin_common_vertical"
	android:orientation="vertical" >
	
	<Button
	     android:id="@+id/button_edit_hive_details"
	     android:layout_width="200dp"
	     android:layout_height="wrap_content"
	     android:layout_gravity="center"
	     android:text="@string/button_edit_hive_details"
	     android:onClick="onButtonEditHiveDetailsClicked" />
	 
	 <Button
	     android:id="@+id/button_add_inspections"
	     android:layout_width="200dp"
	     android:layout_height="wrap_content"
	     android:layout_gravity="center"
	     android:text="@string/button_add_inspections"
	     android:onClick="onButtonAddInspectionsClicked" />

	 <RelativeLayout
	     android:layout_width="match_parent"
	     android:layout_height="0dp"
	     android:layout_weight="1" >
	     
	 </RelativeLayout>

	 <EditText
	     android:id="@+id/hive_notes_input"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="@dimen/margin_common"
	     android:hint="@string/hint_type_notes" >
	 </EditText>
	    
</LinearLayout>