<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_common_vertical"
    android:paddingLeft="@dimen/margin_common_horizontal"
    android:paddingRight="@dimen/margin_common_horizontal"
    android:paddingTop="@dimen/margin_common_vertical"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/margin_common_vertical">
        
        <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

        <Button
            android:id="@+id/locate_me_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/map_fragment"
            android:paddingLeft="@dimen/padding_common"
            android:paddingRight="@dimen/padding_common"
            android:background="#a8ffffff"
            android:drawableLeft="@android:drawable/ic_menu_mylocation"
            android:text="@string/locate_me_button"
            android:textColor="#000"
            android:onClick="onButtonLocateMeClicked" />
        
    </RelativeLayout>

    <Button
        android:id="@+id/add_hives"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_add_hives"
        android:onClick="onButtonAddHivesClicked" />
    
    <Button
        android:id="@+id/manage_flora"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_manage_flora" />

    <EditText
        android:id="@+id/notes_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|clip_vertical"
        android:inputType="textMultiLine"
        android:hint="@string/hint_type_notes" >

        <requestFocus />
    </EditText>
    
</LinearLayout>
