<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/common_padding">

    <ProgressBar
        android:id="@+id/progress_spin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

	<LinearLayout
	    android:id="@+id/weather_info_container"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center"
	    android:visibility="invisible" >
	
	    <TextView
	        android:id="@+id/weather_condition"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/placeholder_weather_condition"
	        android:textStyle="bold"
	        android:textSize="17sp"
	        android:textColor="#fff"
	        android:gravity="center_horizontal"
	        android:textAllCaps="true" />
	    
	    <ImageView
	        android:id="@+id/weather_icon"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:layout_marginLeft="@dimen/common_margin"
	        android:layout_marginRight="@dimen/common_margin"
	        android:contentDescription="@string/content_descr_weather_condition_graphical_indicator"
	        android:src="@drawable/weather_condition_clear" />
	
	    <TextView
	        android:id="@+id/weather_temperature"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/placeholder_weather_degrees"
	        android:textSize="30sp"
	        android:textColor="#fff"
	        android:gravity="center_horizontal"
	        android:textAllCaps="true" />
	
	</LinearLayout>

</RelativeLayout>
