<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/queen_seen_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/queen_seen_row_label_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/queen_seen_label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_queen_seen"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/queen_seen_label_descr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_queen_seen"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/queen_seen_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/queen_marked_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_common"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/queen_marked_label_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/queen_marked_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_queen_marked"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/queen_marked_descr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_queen_marked"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/queen_marked_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
    
    <EditText
        android:id="@+id/queen_origin_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_common"
        android:inputType="text"
        android:hint="Queen origin" />

</LinearLayout>
